@@ -1614,7 +1614,7 @@ void run_program(void)
   if (!commandline_action && !commandline_journal)
   {
     std::cout << "\nNo action was specified. For example, specify one of:\n";
-    std::cout << "    --inode ino            Show info on inode 'ino'; inode 2 is the root.\n";
+    std::cout << "    --inode ino            Show info on inode 'ino'; inode " << EXT3_ROOT_INO << " is the root.\n";
     std::cout << "    --block blk [--ls]     Show info on block 'blk'.\n";
     std::cout << "    --histogram=dtime --after=1000000000 --before=1400000000\n";
     std::cout << "                           Show deletion-time histogram (zoom in afterwards).\n";
@@ -4707,11 +4707,11 @@ void init_directories(void)
     init_dir_inode_to_block_cache();
 
     // Get root inode.
-    Inode& root_inode(get_inode(2));
-    Parent parent(&root_inode, 2);
-    // Get the block that refers to inode 2.
-    int root_blocknr = dir_inode_to_block(2);
-    ASSERT(root_blocknr != -1);	// This should be impossible; inode 2 is never wiped(?).
+    Inode& root_inode(get_inode(EXT3_ROOT_INO));
+    Parent parent(&root_inode, EXT3_ROOT_INO);
+    // Get the block that refers to inode EXT3_ROOT_INO.
+    int root_blocknr = dir_inode_to_block(EXT3_ROOT_INO);
+    ASSERT(root_blocknr != -1);	// This should be impossible; inode EXT3_ROOT_INO is never wiped(?).
     // Get the contents of the first block of the root directory.
     unsigned char* block_buf = new unsigned char [block_size_];
     get_block(root_blocknr, block_buf);
@@ -4868,6 +4868,7 @@ void init_directories(void)
       cache << '\n';
     }
 
+    cache << "# END\n";
     cache.close();
   }
   else
@@ -4885,6 +4886,7 @@ void init_directories(void)
     int inode;
     int blocknr;
     char c;
+    // Skip initial comments.
     for(;;)
     {
       cache.get(c);
@@ -4908,7 +4910,7 @@ void init_directories(void)
       ASSERT(c == '\'');
       path.str("");
       cache.get(*path.rdbuf(), '\'');
-      if (inode == 2)	// If the function extracts no elements, it calls setstate(failbit).
+      if (inode == EXT3_ROOT_INO)	// If the function extracts no elements, it calls setstate(failbit).
 	cache.clear();
       cache.get(c);	// Extraction stops on end-of-file or on an element that compares equal to delim (which is not extracted).
       ASSERT(c == '\'');
@@ -4934,6 +4936,21 @@ void init_directories(void)
       for (std::vector<uint32_t>::iterator block_number_iter = block_numbers.begin();
           block_number_iter != block_numbers.end(); ++block_number_iter, ++directory_block_iter)
 	directory_block_iter->read_block(*block_number_iter, directory_block_iter);
+    }
+    // Read any last line.
+    cache.clear();
+    char last_line[16];
+    cache.getline(last_line, sizeof(last_line));
+    if (strcmp(last_line, "# END"))
+    {
+      std::cout << std::endl;
+      std::cerr << "ERROR: " << cache_stage2 << " does not end on \"# END\" this could mean:\n";
+      std::cerr << "1) You just upgraded to a version higher than 0.3.1 and/or higher than SVN Revision 40.\n";
+      std::cerr << "2) You ran this program before but it was terminated before finishing stage2.\n";
+      std::cerr << "If you are sure that this stage2 cache file was generated by an older\n";
+      std::cerr << "version and is OK, append a line '# END' to it (echo \"# END\" >> " << cache_stage2 << ").\n";
+      std::cerr << "If unsure, delete " << cache_stage2 << " and run the program again." << std::endl;
+      exit(EXIT_FAILURE);
     }
     cache.close();
     std::cout << " done\n";
